# path_segmentation

./: README.md
path_segmentor/: CMakeLists.txt  construction_bt_tp_corridor.xml  context.txt  nav2_corridor_pursuit.yaml  package.xml  path_corridor_layer_plugin.xml
path_segmentor/include/path_segmentor/: path_corridor_layer.hpp
path_segmentor/msg/: CorridorShrinkStatus.msg
path_segmentor/src/: path_corridor_layer.cpp  path_corridor_segmenter.cpp
